KOGITO-6664 Added annotations and description from the WF definition to the Open API file